Polish order emails and attach uploaded designs